fix info.css spacing; add hindsight subpage

--- a/css/info.css
+++ b/css/info.css
@@ -62,6 +62,7 @@ a {
   height: auto;
   width: 100%;
   overflow: hidden;
+  grid-gap: 3em;
 }
 
 .project-info {
@@ -73,7 +74,7 @@ a {
 .project-desc {
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
+  font-size: 1.4em;
   max-width: 280px;
 }
 
@@ -199,6 +200,8 @@ a {
   }
   .project-desc {
     font-size: 1.3em;
+    width: 380px;
+    max-width: 380px;
   }
   .projects-grid {
     grid-template-columns: 1fr;
@@ -208,9 +211,8 @@ a {
   }
   .project-info {
     order: 2;
-    padding: 3em;
-    margin-top: 1.5em;
-    margin-left: 2em;
+    padding: 1em 3em 3em 3em;
+    margin-left: 1.5em;
   }
 }
 
@@ -219,13 +221,20 @@ a {
     padding: 0;
   }
   .project-name {
-    font-size: 2.3em;
+    font-size: 2.2em;
+    padding: 1em 0;
   }
   .projects-grid {
     grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
+  .project-desc {
+    font-size: 1.3em;
+    width: 300px;
+    max-width: 300px;
   }
   .project-info {
-    margin-top: 0;
-    margin-left: 0;
+    margin-top: 1em;
+    margin-left: 0.5em;
   }
 }
